FEA: Added merging group step.

--- a/default_config.ini
+++ b/default_config.ini
@@ -62,5 +62,5 @@ output_prefix = "step2-"
 # the number of group encounters. You should define the threshold in the next configuration
 enable_filtering = true
 
-# Defint the minimum number of encounters. It is used only when filtering is enabled
+# Define the minimum number of encounters. It is used only when filtering is enabled
 encounters_threshold = 2
