FEA: added neighborhood inspection step.

--- a/default_config.ini
+++ b/default_config.ini
@@ -47,16 +47,12 @@ size_threshold = 3
 # registered.
 [step2]
 
-# Define if this step should be executed. If it is disabled, all subsequent steps are also
-# disabled.
-enabled = true
-
 # Define if groups detected in this step should be written in the output dir
 # If it is enabled files will be created in the format <prefix>node<nodenumber>.json
 enable_output = true
 
 # Define the prefix applied to output files
-output_prefix = "step2-"
+output_prefix = step2-
 
 # Define if generated groups should be filtered. In this step the filter is based on
 # the number of group encounters. You should define the threshold in the next configuration
@@ -64,3 +60,25 @@ enable_filtering = true
 
 # Define the minimum number of encounters. It is used only when filtering is enabled
 encounters_threshold = 2
+
+# In step 3 the program combines each node merged groups with the groups detected by its direct
+# neighbors.
+[step3]
+
+# Define if groups detected in this step should be written in the output dir.
+# If it is enabled files will be created in the format <prefix>node<nodenumber>.json
+enable_output = true
+
+# Define the prefix applied to output files.
+output_prefix = step3-
+
+# Define if generated groups should be filtered. In this step the filter is based on
+# the number of group encounters and the number of group members after combining
+# local groups with neighbor groups.
+enable_filtering = true
+
+# Define the minimum number of encounters. It is used only when filtering is enabled
+encounters_threshold = 2
+
+# Define the minimum number of members for a group. It is used only when filtering is enabled.
+size_threshold = 3
