FEA: added group graph creation step.

--- a/default_config.ini
+++ b/default_config.ini
@@ -82,3 +82,18 @@ encounters_threshold = 2
 
 # Define the minimum number of members for a group. It is used only when filtering is enabled.
 size_threshold = 3
+
+# In step 4 the program build a group graph using the information generated in previous steps.
+# The generated graph is stored in pickle objects that can be reused later to compute metrics.
+# In order to load the generated graphs you need to use networkx library.
+# The files created in this step follow the template <prefix>node<nodenumber>.pickle
+[step4]
+
+# Define the prefix to name stored files.
+output_prefix = step4-
+
+# The simulation time in seconds. Is used to compute edge weights.
+simulation_time = 1296000
+
+# The messages ttl in seconds considered. Is used to compute edge weights.
+message_ttl = 1296000
